preparing to deploy

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1442,7 +1442,7 @@ Icon for all respective meta
 
 /* === Hire Section === */
 .hire-section {
-    background: url(../../assets/images/hire-bg.jpg) no-repeat top center #68C3A3;
+    background: url(../../assets/images/agile.jpg) no-repeat bottom center #68C3A3;
     background-attachment: fixed;
     background-size: cover;
     color: #fff;
